Fix spacing

--- a/source/stylesheets/components/_article.scss
+++ b/source/stylesheets/components/_article.scss
@@ -1,10 +1,13 @@
 .article {
   padding: 1rem;
   flex-grow: 1;
+  width: calc(100vw - 2rem);
+  max-width: 800px;
+  padding: 1rem;
   
   @media (min-width: 768px) {
-    max-width: 800px;
     padding: 4rem;
+    width: calc(100vw - 8rem);
   }
 }
 
@@ -146,6 +149,13 @@
     font-family: var(--serif);
     font-size: var(--font-small);
     line-height: 0.5;
+  }
+
+  .gist,
+  .cp_embed_wrapper  {
+    display: block;
+    margin: 1.5rem 0;
+    max-width: 100%;
   }
 
   a:link,
